# research

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
python/code-agent-by-claude/: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
python/code-agent-by-claude/src/code_agent_by_claude/: __init__.py  events.py  main.py  message_processor.py  orchestrator.py  run_coder.py  run_detail_planner.py  run_planner.py  run_researcher.py  stream_handler.py
python/code-agent-by-claude/src/code_agent_by_claude/agents/: __init__.py  coder.py  detail_planner.py  planner.py  researcher.py  reviewer.py
python/code-agent-by-claude/src/code_agent_by_claude/agents/prompts/: __init__.py  coder.md  coder_task.md  detail_planner.md  detail_planner_task.md  planner.md  planner_task.md  researcher.md  researcher_task.md  reviewer.md  reviewer_task.md
python/code-agent-by-claude/tests/: test_main.py
